Fixed a bug relating to resolving DbContext instance, added some text and improved layout

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -3,12 +3,15 @@ RELEASE NOTES
 - Tools
 
 1. SQL Server 2008 R2
-2. Visual Studio 2013
+2. Visual Studio Professional 2013
 3. MVC 5
 4. Net 4.6.1
 
 - Please restore database from the backup copy provided (Tax.bak)
-- After restoring, please update connection strings in web.config/app.config to point to the correct location. There are 2 locations as follows:
+
+- After restoring, please update connection strings in web.config/app.config to 
+  point to the correct location. There are 2 locations as follows:
+
 	\DataProcessingExperiment\DataProcessingExperiment.Mvc\Web.config
 	\DataProcessingExperiment\DataProcessingExperiment.Sql\App.config
 
